@@ -50,6 +50,10 @@ class Configuration(
     get_sale_invoice_methods = get_sale_methods('invoice_method')
     sale_shipment_method = fields.MultiValue(sale_shipment_method)
     get_sale_shipment_methods = get_sale_methods('shipment_method')
+    sale_process_after = fields.TimeDelta("Process Sale after",
+        help="The grace period during which confirmed sale "
+        "can still be reset to draft..\n"
+        "Applied if a worker queue is activated.")
 
     @classmethod
     def multivalue_model(cls, field):
