@@ -1,3 +1,5 @@
+* Add configured delay for processing sale
+* Allow to reset to draft confirmed but not processed sale
 * Show number and reference in sale rec_name
 * Remove support for Python 2.7
 * Invoice sold product instead of shipped product
